--- a/gabung/v6.html
+++ b/gabung/v6.html
@@ -12,41 +12,45 @@
   textarea, select { width:100%; box-sizing:border-box; font-size:1rem; padding:8px; border-radius:6px; border:1px solid #ccc; resize:vertical; }
   textarea { height:150px; }
   #output { display:none; margin-top:10px; background:#fff; border-radius:8px; border:1px solid #ffd42a; padding:10px 15px; box-shadow:0 0 8px rgba(255,212,42,0.2);}
-  .link-item { display:flex; justify-content:space-between; align-items:center; background:#fffbec; padding:8px 10px; border-bottom:1px dashed #ffd42a; border-radius:5px; margin-bottom:6px; }
-  .link-item a.link { color:#0066cc; text-decoration:none; word-break:break-all; flex:1; }
+  .link-item {
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    background:#fffbec;
+    padding:8px 10px;
+    border-bottom:1px dashed #ffd42a;
+    border-radius:5px;
+    margin-bottom:6px;
+  }
+  .link-item a.link {
+    color:#0066cc;
+    text-decoration:none;
+    word-break:break-all;
+    flex:1;
+  }
   .link-item a.link:hover { text-decoration:underline; }
-  .link-item a.report { color:#cc0000; text-decoration:none; font-weight:bold; margin-left:10px; white-space:nowrap; }
+  .link-item a.report {
+    color:#cc0000;
+    text-decoration:none;
+    font-weight:bold;
+    margin-left:10px;
+    white-space:nowrap;
+  }
   .link-item a.report:hover { text-decoration:underline; }
 
   .pagination { margin-top:15px; text-align:center; display:flex; flex-wrap:wrap; gap:6px; justify-content:center; }
-  .page-btn { padding:10px 14px; cursor:pointer; border:1px solid #ccc; border-radius:6px; background-color:white; font-size:1rem; min-width:40px; transition:0.3s; }
+  .page-btn { padding:10px 14px; cursor:pointer; border:1px solid #ccc; border-radius:6px; background-color:white; font-size:1rem; min-width:40px; }
   .page-btn:hover { background-color:#ffd42a; color:#b36b00; }
   .active { font-weight:bold; background-color:#ffd42a; color:#b36b00; border-color:#b36b00; }
   #copyBtn { margin-top:12px; padding:12px; font-size:1rem; cursor:pointer; border:none; background-color:#ffd42a; color:#b36b00; border-radius:6px; width:100%; }
   #copyBtn:hover { background-color:#e6c72b; }
   .input-buttons { display:flex; gap:8px; margin-top:6px; flex-wrap:wrap; }
-  .input-buttons button { flex:1; padding:10px; font-size:0.95rem; cursor:pointer; border:1px solid #ccc; border-radius:6px; background:#f5f5f5; transition:0.3s; }
+  .input-buttons button { flex:1; padding:10px; font-size:0.95rem; cursor:pointer; border:1px solid #ccc; border-radius:6px; background:#f5f5f5; }
   .input-buttons button:hover { background:#eee; }
   #stats { margin:15px 0; font-weight:bold; font-size:1rem; white-space:pre-line; }
-
   .sponsor { background-color:#fffae6; border:1px solid #ffd42a; padding:12px; margin:15px 0; font-weight:bold; text-align:center; color:#b36b00; border-radius:6px; box-shadow:0 0 5px rgba(255,212,42,0.5); font-size:1rem; }
   footer { text-align:center; margin-top:25px; font-size:0.9rem; color:#888; }
   .backup-area { margin-top:25px; padding:12px; background:#fffbe6; border-radius:8px; border:1px solid #ffd42a; text-align:center; }
-
-  /* Notifikasi melayang halus */
-  #updateNotice {
-    margin-top:10px;
-    font-weight:bold;
-    text-align:center;
-    padding:10px 15px;
-    border-radius:6px;
-    transition: all 0.5s ease;
-    opacity:0;
-  }
-  #updateNotice.show {
-    opacity:1;
-  }
-
   @media (max-width:720px){
     body { padding:12px; }
     textarea{ height:120px; }
@@ -64,8 +68,8 @@
 </head>
 <body>
 
-<h1>Produk Live MadGazan 6 November 2025</h1>
-<h2>Manajemen Shopee Live</h2>
+<h1>Produk Live MadGazan 5 Oktober</h1>
+<h2>Manajemen Shopee Live v1</h2>
 
 <textarea id="inputLinks" placeholder="Masukkan ribuan link produk Shopee, satu per baris..."></textarea>
 
@@ -85,11 +89,10 @@
   <option value="rini.txt">rini.txt</option>
   <option value="nurbad.txt">nurbad.txt</option>
 </select>
+<div id="updateNotice" style="margin:10px 0; font-weight:bold;"></div>
 <div class="input-buttons">
   <button id="ambilFileListLinksBtn">Download Terbaru Masal</button>
 </div>
-
-<div id="updateNotice"></div>
 
 <div class="sponsor">
   Disponsori oleh <strong>MadGazan Studio</strong><br>
@@ -114,27 +117,21 @@
   <button id="syncAllBtn" style="margin-top:15px; background:#d0ffd0; border-color:#00aa00;">🔄 Singkron Semua File TXT</button>
 </div>
 
-<footer>© 2025 MadGazan Studio — Semua Hak Dilindungi</footer>
+<footer>
+  © 2025 MadGazan Studio — Semua Hak Dilindungi
+</footer>
 
 <script>
-const MAX_PER_PAGE = 99;
-const PAGE_OFFSET = 0;
+const MAX_PER_PAGE = 100;
+const PAGE_OFFSET = 20;
 let allPages = [];
 let currentPage = 1;
+
 const inputLinksEl = document.getElementById('inputLinks');
 const statsEl = document.getElementById('stats');
 const outputEl = document.getElementById('output');
 const paginationEl = document.getElementById('pagination');
 const dropdownEl = document.getElementById('fileDropdown');
-const noticeEl = document.getElementById('updateNotice');
-
-function showNotice(msg, color, bg) {
-  noticeEl.textContent = msg;
-  noticeEl.style.color = color;
-  noticeEl.style.background = bg;
-  noticeEl.classList.add('show');
-  setTimeout(() => noticeEl.classList.remove('show'), 5000);
-}
 
 function getStorageKey() {
   const f = dropdownEl.value || 'default';
@@ -155,112 +152,255 @@ function loadAppData() {
 window.addEventListener('load', () => {
   const savedDropdown = localStorage.getItem('selectedFile');
   if (savedDropdown) dropdownEl.value = savedDropdown;
-  loadAppData(); processLinks(); showPage(currentPage);
-  setTimeout(checkForUpdates, 2000);
+  loadAppData();
+  processLinks();
+  showPage(currentPage);
 });
 
-inputLinksEl.addEventListener('input', () => { processLinks(); saveAppData(); });
-document.getElementById('clearInputLinksBtn').onclick = () => { inputLinksEl.value=''; saveAppData(); processLinks(); };
-document.getElementById('copyInputLinksBtn').onclick = () => { 
-  const t = inputLinksEl.value.trim(); 
-  if(!t) return showNotice('⚠️ Input kosong!','#cc0000','#ffe6e6'); 
-  navigator.clipboard.writeText(t); showNotice('✅ Disalin ke clipboard!','#008800','#e6ffe6');
-};
-document.getElementById('hapusDuplikatBtn').onclick = () => {
-  const lines = inputLinksEl.value.split('\n').map(l=>l.trim()).filter(Boolean);
+dropdownEl.addEventListener('change', () => {
+  localStorage.setItem('selectedFile', dropdownEl.value);
+  loadAppData();
+  processLinks();
+  showPage(currentPage);
+});
+
+inputLinksEl.addEventListener('input', () => {
+  processLinks();
+  saveAppData();
+});
+
+document.getElementById('clearInputLinksBtn').addEventListener('click', () => {
+  inputLinksEl.value = '';
+  saveAppData();
+  processLinks();
+});
+document.getElementById('copyInputLinksBtn').addEventListener('click', () => {
+  const text = inputLinksEl.value.trim();
+  if (!text) return alert('Input kosong!');
+  navigator.clipboard.writeText(text).then(() => alert('Disalin!'));
+});
+document.getElementById('hapusDuplikatBtn').addEventListener('click', () => {
+  const lines = inputLinksEl.value.split('\n').map(l => l.trim()).filter(Boolean);
   const unique = [...new Set(lines)];
   inputLinksEl.value = unique.join('\n');
-  processLinks(); saveAppData();
-  showNotice('✅ Duplikat dihapus!','#008800','#e6ffe6');
-};
-document.getElementById('sortirPerTokoBtn').onclick = () => {
-  const lines = inputLinksEl.value.split('\n').map(l=>l.trim()).filter(Boolean);
+  processLinks();
+  saveAppData();
+  alert('Duplikat dihapus!');
+});
+
+/* === FUNGSI BARU: SORTIR BERDASARKAN ID TOKO === */
+document.getElementById('sortirPerTokoBtn').addEventListener('click', () => {
+  const lines = inputLinksEl.value.split('\n').map(l => l.trim()).filter(Boolean);
   const tokoMap = new Map();
-  for (let l of lines) {
-    const m = l.match(/product\/(\d+)\/(\d+)/);
-    if (m) if (!tokoMap.has(m[1])) tokoMap.set(m[1], l);
+  for (let link of lines) {
+    const match = link.match(/product\/(\d+)\/(\d+)/);
+    if (match) {
+      const shopId = match[1];
+      if (!tokoMap.has(shopId)) tokoMap.set(shopId, link);
+    }
   }
-  inputLinksEl.value = [...tokoMap.values()].join('\n');
-  processLinks(); saveAppData();
-  showNotice('✅ Sortir per toko selesai!','#008800','#e6ffe6');
-};
+  const hasil = Array.from(tokoMap.values());
+  inputLinksEl.value = hasil.join('\n');
+  processLinks();
+  saveAppData();
+  alert(`Sortir selesai!\nTotal toko unik: ${hasil.length}`);
+});
 
 function processLinks() {
-  const raw = inputLinksEl.value.split('\n').map(l=>l.trim()).filter(Boolean);
+  const raw = inputLinksEl.value.split('\n').map(l => l.trim()).filter(Boolean);
   const unique = [...new Set(raw)];
   const dup = raw.length - unique.length;
   allPages = [];
-  for (let i=0;i<unique.length;i+=MAX_PER_PAGE) allPages.push(unique.slice(i,i+MAX_PER_PAGE));
+  for (let i = 0; i < unique.length; i += MAX_PER_PAGE) {
+    allPages.push(unique.slice(i, i + MAX_PER_PAGE));
+  }
   if (currentPage > allPages.length) currentPage = 1;
-  statsEl.textContent = `Total link diinput: ${raw.length}\nLink unik: ${unique.length}\nDuplikat dihapus: ${dup}\nTotal halaman: ${allPages.length}`;
+  renderStats(raw.length, unique.length, dup);
   renderPagination();
 }
-function showPage(p) {
-  if (!allPages.length) { outputEl.style.display='none'; return; }
-  currentPage=p;
-  const f = dropdownEl.value || 'default.txt';
-  outputEl.innerHTML = allPages[p-1].map(l=>{
-    const rep = `https://niddumulu.github.io/shope-tools/lapor/index.html?link=${encodeURIComponent(l)}&file=${encodeURIComponent(f)}`;
-    return `<div class="link-item"><a class="link" href="${l}" target="_blank">${l}</a><a class="report" href="${rep}" target="_blank">Laporkan</a></div>`;
+
+function renderStats(total, uniq, dup) {
+  statsEl.textContent =
+    `Total link diinput: ${total}\nLink unik: ${uniq}\nDuplikat dihapus: ${dup}\nTotal halaman: ${allPages.length}`;
+}
+
+/* === ✅ TAMPILAN DIBUAT CANTIK DENGAN LAYOUT BARU === */
+function showPage(page) {
+  if (!allPages.length) { outputEl.style.display = 'none'; return; }
+  currentPage = page;
+  const fileNow = dropdownEl.value || 'default.txt';
+  outputEl.innerHTML = allPages[page - 1].map(l => {
+    const reportUrl = `https://niddumulu.github.io/shope-tools/lapor/index.html?link=${encodeURIComponent(l)}&file=${encodeURIComponent(fileNow)}`;
+    return `<div class="link-item">
+              <a class="link" href="${l}" target="_blank">${l}</a>
+              <a class="report" href="${reportUrl}" target="_blank">Laporkan</a>
+            </div>`;
   }).join('');
-  outputEl.style.display='block';
-  document.querySelectorAll('.page-btn').forEach((b,i)=>b.classList.toggle('active',i+1===p));
+  outputEl.style.display = 'block';
+  highlightActivePage();
   saveAppData();
 }
+/* === ✅ END TAMPILAN BARU === */
+
 function renderPagination() {
-  paginationEl.innerHTML='';
-  for(let i=1;i<=allPages.length;i++){
-    const b=document.createElement('button');
-    b.textContent=i+PAGE_OFFSET; b.className='page-btn';
-    if(i===currentPage)b.classList.add('active');
-    b.onclick=()=>showPage(i);
-    paginationEl.appendChild(b);
+  paginationEl.innerHTML = '';
+  for (let i = 1; i <= allPages.length; i++) {
+    const btn = document.createElement('button');
+    btn.textContent = i + PAGE_OFFSET;
+    btn.className = 'page-btn';
+    if (i === currentPage) btn.classList.add('active');
+    btn.onclick = () => showPage(i);
+    paginationEl.appendChild(btn);
   }
+}
+function highlightActivePage() {
+  document.querySelectorAll('.page-btn').forEach((btn, index) => {
+    btn.classList.toggle('active', index + 1 === currentPage);
+  });
 }
 function copyToClipboard() {
-  if (!allPages.length) return showNotice('⚠️ Tidak ada link!','#cc0000','#ffe6e6');
-  navigator.clipboard.writeText(allPages[currentPage-1].join('\n'));
-  showNotice('✅ Disalin ke clipboard!','#008800','#e6ffe6');
+  if (!allPages.length) return alert('Tidak ada link!');
+  const text = allPages[currentPage - 1].join('\n');
+  navigator.clipboard.writeText(text).then(() => alert('Disalin!'));
 }
 
-/* Sinkronisasi */
-async function syncAllFiles() {
-  const opts = Array.from(dropdownEl.options).filter(o=>o.value);
-  if(!opts.length) return showNotice('⚠️ Tidak ada file di dropdown.','#cc0000','#ffe6e6');
-
-  showNotice('⏳ Sinkronisasi sedang berjalan...','#666','#f9f9f9');
-  let ok=0,fail=0,last='',lastFile='';
-  for(const o of opts){
-    try{
-      const r=await fetch(o.value+'?t='+Date.now(),{cache:'no-store'});
-      if(!r.ok)throw new Error('HTTP '+r.status);
-      const txt=(await r.text()).trim();
-      localStorage.setItem('appData_'+o.value,JSON.stringify({inputList:txt,currentPage:1}));
-      ok++; last=txt; lastFile=o.value;
-    }catch(e){ fail++; }
+/* === Backup & Import === */
+function exportLocalStorage() {
+  const data = {};
+  for (let i = 0; i < localStorage.length; i++) {
+    const key = localStorage.key(i);
+    data[key] = localStorage.getItem(key);
   }
-  if(last){ inputLinksEl.value=last; dropdownEl.value=lastFile; localStorage.setItem('selectedFile',lastFile); processLinks(); showPage(1); }
-  showNotice(`✅ Sinkronisasi selesai: ${ok} sukses, ${fail} gagal. Terakhir: ${lastFile}`,'#008800','#e6ffe6');
+  const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
+  const url = URL.createObjectURL(blob);
+  const a = document.createElement('a');
+  a.href = url;
+  a.download = 'madgazan_backup.json';
+  a.click();
+  URL.revokeObjectURL(url);
+  alert('✅ Data berhasil disimpan ke file madgazan_backup.json');
+}
+function importLocalStorage() {
+  const fileInput = document.getElementById('importFile');
+  const file = fileInput.files[0];
+  if (!file) return alert('Pilih file JSON dulu.');
+  const reader = new FileReader();
+  reader.onload = function(e) {
+    try {
+      const data = JSON.parse(e.target.result);
+      Object.keys(data).forEach(key => {
+        localStorage.setItem(key, data[key]);
+      });
+      alert('✅ Data berhasil diimport. Reload halaman untuk melihat hasil.');
+      location.reload();
+    } catch (err) {
+      alert('❌ File tidak valid: ' + err.message);
+    }
+  };
+  reader.readAsText(file);
+}
+function resetLocalStorage() {
+  if (confirm('Yakin ingin menghapus semua data localStorage?')) {
+    localStorage.clear();
+    alert('Semua data localStorage telah dihapus.');
+    location.reload();
+  }
 }
 
-/* Check Update */
-async function checkForUpdates(){
-  const f=dropdownEl.value;
-  if(!f){noticeEl.textContent='';return;}
-  showNotice('⏳ Memeriksa versi server...','#666','#f9f9f9');
-  try{
-    const r=await fetch(f+'?check='+Date.now(),{cache:'no-store'});
-    if(!r.ok)throw new Error('HTTP '+r.status);
-    const s=(await r.text()).trim();
-    const local=JSON.parse(localStorage.getItem('appData_'+f)||'{}');
-    const l=(local.inputList||'').trim();
-    if(s!==l) showNotice('⚠️ Data di server berbeda. Klik "Download Terbaru Masal" untuk memperbarui.','#cc0000','#ffe6e6');
-    else showNotice('✅ Data lokal sudah versi terbaru.','#008800','#e6ffe6');
-  }catch(e){showNotice('⚠️ Gagal memeriksa update.','#cc0000','#ffe6e6');}
+  /* === FUNGSI SINKRON SEMUA FILE === */
+async function syncAllFiles() {
+  const options = Array.from(dropdownEl.options).filter(o => o.value);
+  if (!options.length) return alert('Tidak ada file di dropdown.');
+
+  if (!confirm(`Sinkron semua file (${options.length} file)?`)) return;
+
+  let success = 0, fail = 0, lastText = '', lastFile = '';
+
+  for (const opt of options) {
+    try {
+      const res = await fetch(opt.value + '?t=' + Date.now(), { cache: 'no-store' });
+      if (!res.ok) throw new Error('HTTP ' + res.status);
+      const text = await res.text();
+      const key = 'appData_' + opt.value;
+      const data = { inputList: text.trim(), currentPage: 1 };
+      localStorage.setItem(key, JSON.stringify(data));
+      success++;
+      lastText = text.trim();
+      lastFile = opt.value;
+      console.log(`✅ ${opt.value} berhasil disinkronkan.`);
+    } catch (e) {
+      console.warn(`❌ Gagal ambil ${opt.value}:`, e);
+      fail++;
+    }
+  }
+
+  if (lastText) {
+    inputLinksEl.value = lastText;
+    dropdownEl.value = lastFile;
+    localStorage.setItem('selectedFile', lastFile);
+    processLinks();
+    showPage(1);
+  }
+
+  alert(`Sinkronisasi selesai.\nBerhasil: ${success}\nGagal: ${fail}\nTerakhir ditampilkan: ${lastFile}`);
 }
 
-document.getElementById('syncAllBtn').onclick=syncAllFiles;
-document.getElementById('ambilFileListLinksBtn').onclick=syncAllFiles;
+/* === Hubungkan tombol === */
+document.getElementById('syncAllBtn').addEventListener('click', syncAllFiles);
+document.getElementById('ambilFileListLinksBtn').addEventListener('click', syncAllFiles);
+
+async function checkForUpdates() {
+  const selectedFile = dropdownEl.value;
+  const noticeEl = document.getElementById('updateNotice');
+  if (!selectedFile) { noticeEl.textContent = ''; return; }
+
+  const fileName = selectedFile.split('/').pop(); // ambil nama file dari URL
+  noticeEl.textContent = `⏳ Memeriksa versi server untuk "${fileName}"...`;
+  noticeEl.style.color = '#666';
+
+  try {
+    const res = await fetch(selectedFile + '?check=' + Date.now(), { cache: 'no-store' });
+    if (!res.ok) throw new Error('HTTP ' + res.status);
+    const serverText = (await res.text()).trim();
+
+    const localKey = 'appData_' + selectedFile;
+    const localData = JSON.parse(localStorage.getItem(localKey) || '{}');
+    const localText = (localData.inputList || '').trim();
+
+    if (serverText !== localText) {
+      noticeEl.textContent = `⚠️ Data lokal "${fileName}" berbeda dengan versi server.`;
+      noticeEl.style.color = '#b30000';
+    } else {
+      noticeEl.textContent = `✅ Data lokal "${fileName}" sudah versi terbaru.`;
+      noticeEl.style.color = '#008000';
+      setTimeout(() => { noticeEl.textContent = ''; }, 5000);
+    }
+  } catch (err) {
+    console.warn('Gagal memeriksa versi server:', err);
+    noticeEl.textContent = `❌ Tidak dapat menghubungi server untuk "${fileName}".`;
+    noticeEl.style.color = '#b30000';
+  }
+}
+
+
+window.addEventListener('load', () => {
+  const savedDropdown = localStorage.getItem('selectedFile');
+  if (savedDropdown) dropdownEl.value = savedDropdown;
+  loadAppData();
+  processLinks();
+  showPage(currentPage);
+  setTimeout(checkForUpdates, 2000);
+});
+
+dropdownEl.addEventListener('change', () => {
+  localStorage.setItem('selectedFile', dropdownEl.value);
+  loadAppData();
+  processLinks();
+  showPage(currentPage);
+  checkForUpdates();
+});
+
+
 </script>
 </body>
 </html>
